Header align fix

--- a/public/page1.css
+++ b/public/page1.css
@@ -13,12 +13,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    height: 100%;
+    width: 100%;
 }
+noscript {
+    display: flex;
+    justify-content: center;
+}
+
 #blur {
     background-color: black;
     position: absolute;
+    opacity: 1;
     width: 100%;
     height: 100%;
-    filter: blur(4px);
+    filter: blur(105px);
 }
